# rtg-forge

./: .gitignore  .mcp.json  Dockerfile  NORTH_STAR.md  README.md  forge.toml  package.json  pyproject.toml
.claude/commands/: add-module.md  capture-correction.md  generate-claude-md.md  health-check.md  optimize.md  prepare-module.md  scout-modules.md  sync-skills.md  sync-to-cloud.md  use-module.md
.github/workflows/: ci.yml  correction-analyzer.yml  module-health.yml.disabled  skill-evolution.yml  skill-optimizer.yml.disabled  sync-to-supabase.yml  upstream-practice-checker.yml
cli/: pyproject.toml
core/: pyproject.toml
core/src/rtg_core/: __init__.py  auth.py  config.py  db.py  errors.py  models.py  module_loader.py  profile_loader.py  toml_utils.py
core/tests/: test_config.py  test_module_loader.py  test_profile_loader.py  test_toml_utils.py
decisions/: DECISION_CONTRACT.md
decisions/_template/: DECISION.md  decision.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md
explorer/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
explorer/scripts/: build-index.ts
explorer/src/: App.tsx  index.css  main.tsx
intelligence/: pyproject.toml
mcp-server/: pyproject.toml
modules/: MODULE_CONTRACT.md
modules/api_keys/: MODULE.md  (+1 more)
modules/icp_signal_extraction/: MODULE.md  __init__.py  config.py  models.py  module.toml  pyproject.toml  router.py  service.py
modules/icp_signal_extraction/graph/: graph.py  nodes.py  runner.py  state.py
modules/icp_signal_extraction/migrations/: 001_create_tables.sql
modules/icp_signal_extraction/tests/: test_contract.py
modules/stakeholder_enrichment/: MODULE.md  __init__.py  config.py  models.py  module.toml  pyproject.toml  router.py  service.py
modules/stakeholder_enrichment/migrations/: 001_create_tables.sql
modules/stakeholder_enrichment/tests/: test_contract.py
profiles/: PROFILE_CONTRACT.md
skills/: SKILL_CONTRACT.md
(+218 files in other folders)
