[project]
name = "rtg-forge"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["core", "mcp-server", "cli", "intelligence"]

[tool.uv.sources]
rtg-core = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["*/tests"]
