[project]
name = "icp-signal-extraction"
version = "0.1.0"
description = "Extract, route, cluster, and review ICP signals using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "openai>=1.50.0",
    "anthropic>=0.37.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
