[project]
name = "stakeholder-enrichment"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
